[package]
name = "structpath"
version = "0.1.0"
authors = ["Ben Bariteau <\"ben.bariteau@gmail.com\">"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.0", features = ["derive"] }
maplit = "^1.0.0"
thiserror = "^1.0.22"
