[package]
name = "structpath"
version = "0.2.0"
authors = ["Ben Bariteau <\"ben.bariteau@gmail.com\">"]
edition = "2018"
license-file = "LICENSE"
description = "library type-safe parsing and generation of url paths"
homepage = "https://github.com/firba1/structpath"
repository = "https://github.com/firba1/structpath"
readme = "README.md"
keywords = ["parsing", "url", "web"]
categories = ["parser-implementations", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.0", features = ["derive"] }
thiserror = "^1.0.22"
